<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:gravity="center">
    <TextView
        android:id="@+id/titleAppsId"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/main_image_sur"
        android:gravity="center"
        android:background="#1f2531"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/titleAppId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ads_text"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:textColor="#1f2531"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/icon1"/>
    <Button
        android:id="@+id/tryItId"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:text="Try It Now"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:background="#1f2531"
        android:textColor="#1bb869"/>
    <LinearLayout
        android:id="@+id/endLin"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:id="@+id/exit"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:text="@string/main_oui"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:background="#1f2531"
            android:textColor="#1bb869"/>
        <Button
            android:id="@+id/rate"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:text="@string/main_non"
            android:layout_marginLeft="10dp"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:background="#1f2531"
            android:textColor="#ef5350"/>
    </LinearLayout>
</LinearLayout>